version 2.77
	    Generate an error when configured with a CNAME loop,
	    rather than a crash. Thnaks to George Metz for
	    spotting this problem.

	    Calculate the length of TFTP error reply packet 
	    correctly. This fixes a problem when the error 
	    message in a TFTP packet exceeds the arbitrary 
	    limit of 500 characters. The message was correctly
	    truncated, but not the packet length, so 
	    extra data was appended. This is a possible
	    security risk, since the extra data comes from
	    a buffer which is also used for DNS, so that
	    previous DNS queries or replies may be leaked.
	    Thanks to Mozilla for funding the security audit 
	    which spotted this bug.

	    Fix logic error in Linux netlink code. This could
	    cause dnsmasq to enter a tight loop on systems
	    with a very large number of network interfaces.
	    Thanks to Ivan Kokshaysky for the diagnosis and
	    patch.

 	    Fix problem with --dnssec-timestamp whereby receipt
            of SIGHUP would erroneously engage timestamp checking.
	    Thanks to Kevin Darbyshire-Bryant for this work.

	    Bump zone serial on reloading /etc/hosts and friends
	    when providing authoritative DNS. Thanks to Harrald
	    Dunkel for spotting this.

	    Handle v4-mapped IPv6 addresses sanely in --synth-domain.
	    These have standard representation like ::ffff:1.2.3.4
	    and are now converted to names like
	    <prefix>--ffff-1-2-3-4.<domain>

	    Handle binding upstream servers to an interface 
	    (--server=1.2.3.4@eth0) when the named interface
	    is destroyed and recreated in the kernel. Thanks to 
	    Beniamino Galvani for the patch.

	    Allow wildcard CNAME records in authoritative zones.
	    For example --cname=*.example.com,default.example.com
	    Thanks to Pro Backup for sponsoring this development.

	    Bump the allowed backlog of TCP connections from 5 to 32,
	    and make this a compile-time configurable option. Thanks